--- a/src/pages/HomePage.module.css
+++ b/src/pages/HomePage.module.css
@@ -1,6 +1,8 @@
 .grid{
     display:grid;
     grid-template: 3fr 1fr /1fr;
+    margin: 0;
+    padding: 0;
 }
 
 .heroImage{
@@ -12,29 +14,45 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    margin-bottom: 1rem;
+    margin-left:2rem;
+    margin-right:2rem;
    
 }
 
-.tagLiner{
+.tagLine{
     display: flex;
     justify-content: flex-end;
 }
 
 .nav{
     display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: ;
+    align-items: start;
+    justify-content:center;
+    width: 100%;
+    justify-self: center;
+    margin-top: 1.2rem;
+    margin-bottom: 2rem;
+   
 }
 
-.backgroundImage{
-    /* z-index:-1; */
-   /* maybe add an overlay or filter to make it darker so that the logo pops */
-
+.nav button {
+    margin-left: 0.5rem; /* Adjust the value as needed */
+    margin-right: 0.5rem; /* Adjust the value as needed */
 }
+
+
 .logo{
     max-width: 100%;
     height:auto;
     overflow: hidden;
+
+}
+
+
+@media only screen and (max-width:768px){
+    .nav{
+        align-items: baseline;
+    }
 
 }
